@@ -79,7 +79,15 @@ AC_SUBST(GTK2_22_DEFINES)
 PKG_CHECK_MODULES(GLIB2_14,[glib-2.0 >= 2.14.0],[GLIB2_14_DEFINES="-DGLIB2_14_ENABLED" AC_DEFINE([GLIB2_14_ENABLED],[1],[Define to 1 if you have GLIB 2.14 or higher])],AC_MSG_NOTICE([Using slider for volume]))
 AC_SUBST(GLIB2_14_DEFINES)
 
-PKG_CHECK_MODULES(GLIB2_26,[glib-2.0 >= 2.26.0],[with_gconf=no with_gsettings=yes USE_GSETTINGS=1 AC_SUBST(USE_GSETTINGS) GLIB2_26_DEFINES="-DGLIB2_26_ENABLED" AC_DEFINE([GLIB2_26_ENABLED],[1],[Define to 1 if you have GLIB 2.26 or higher])],AC_MSG_NOTICE([Using GLIB < 2.26 specific features]))
+AC_ARG_WITH([gconf],
+    [AS_HELP_STRING([--with-gconf],
+        [Use Gconf to store preferences])],
+        [],
+        [with_gconf=check])
+AS_IF([test "x$with_gconf" != xyes],        
+    [PKG_CHECK_MODULES(GLIB2_26,[glib-2.0 >= 2.26.0],[with_gconf=no with_gsettings=yes USE_GSETTINGS=1 AC_SUBST(USE_GSETTINGS) GLIB2_26_DEFINES="-DGLIB2_26_ENABLED" AC_DEFINE([GLIB2_26_ENABLED],[1],[Define to 1 if you have GLIB 2.26 or higher])],AC_MSG_NOTICE([Using GLIB < 2.26 specific features]))
+    ])    
+    
 AC_SUBST(GLIB2_26_DEFINES)
 
 AC_ARG_WITH([gio],
@@ -267,13 +275,16 @@ if test x$CHECK_GPM = "xyes"; then
     if test "$GPM" != ""; then
             AC_MSG_NOTICE([Checking for gnome-power-manager support])
             GPMVER=`$GPM --version | sed -e 's/.* 2.//' | cut -b1-2`
-            if test $GPMVER -ge 26; then
+            if test -n $GPMVER; then
                 AC_DEFINE(SM_INHIBIT, 1, [Defined if you are using gnome-power-manager 2.26 or higher])
-            fi
-            if test $GPMVER -lt 26; then
-                AC_DEFINE(SS_INHIBIT, 1, [Defined if you are using gnome-power-manager below 2.26 ])
-            fi
-            
+            else
+                if test $GPMVER -ge 26; then
+                    AC_DEFINE(SM_INHIBIT, 1, [Defined if you are using gnome-power-manager 2.26 or higher])
+                fi
+                if test $GPMVER -lt 26; then
+                    AC_DEFINE(SS_INHIBIT, 1, [Defined if you are using gnome-power-manager below 2.26 ])
+                fi
+            fi            
     fi
 fi
 
